--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.15.2",
     "morgan": "^1.8.1",
     "pug": "^2.0.0-beta11",
-    "serve-favicon": "^2.4.2"
+    "serve-favicon": "^2.4.2",
+    "swagger": "^0.7.5"
   }
 }
