--- a/package.json
+++ b/package.json
@@ -23,7 +23,11 @@
     "express": "^4.15.2",
     "morgan": "^1.8.1",
     "pug": "^2.0.0-beta11",
+    "sequelize": "^3.30.4",
     "serve-favicon": "^2.4.2",
     "swagger": "^0.7.5"
+  },
+  "devDependencies": {
+    "sqlite3": "^3.1.8"
   }
 }
