--- a/package.json
+++ b/package.json
@@ -18,12 +18,19 @@
   },
   "homepage": "https://github.com/lpdw/bio-society#readme",
   "dependencies": {
+    "bcrypt": "^1.0.2",
     "body-parser": "^1.17.1",
     "cookie-parser": "^1.4.3",
+    "cors": "^2.8.3",
+    "debug": "^2.6.3",
     "ejs": "^2.5.6",
     "express": "^4.15.2",
     "express-session": "^1.15.2",
+    "lodash": "^4.17.4",
+    "method-override": "^2.3.8",
     "morgan": "^1.8.1",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "pug": "^2.0.0-beta11",
     "request": "^2.81.0",
     "sequelize": "^3.30.4",
