--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node bin/www"
+    "start": "nodemon bin/www"
   },
   "repository": {
     "type": "git",
@@ -38,6 +38,7 @@
     "swagger": "^0.7.5"
   },
   "devDependencies": {
+    "nodemon": "^1.11.0",
     "sqlite3": "^3.1.8"
   }
 }
